# manticore-orderbook

./: .gitbook.yaml  .gitignore  .readthedocs.yml  CHANGELOG.md  DOCUMENTATION.md  DOC_PUBLISHING.md  Makefile  PUBLISHING.md  README.md  benchmark.py  index.html  install.sh  netlify.toml  pyproject.toml  setup.py  test_debug.py  test_isolated.py  test_snapshot.py  update_all_docs.sh
api-reference/: index.html
docs/: USER_GUIDE.md  requirements.txt
docsify-docs/: _sidebar.md  api-reference.md  changelog.md  events.md  index.html  integration.md
docusaurus-docs/: docusaurus.config.js  sidebars.js
manticore_orderbook/: __init__.py  market_manager.py  models.py  orderbook.py
manticore_orderbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
manticore_orderbook/examples/: COMPATIBILITY.md  README.md  enhanced_example.py  exchange_ready_example.py  market_manager_example.py  start_visualizer.sh
manticore_orderbook/examples/static/css/: orderbook-pro.css
manticore_orderbook/examples/static/js/: orderbook-pro.js
manticore_orderbook/examples/templates/: synced_orderbook.html
mkdocs-docs/: README.md  mkdocs.yml
mkdocs-docs/docs/: index.md  user-guide.md
mkdocs-docs/site/: 404.html  index.html  sitemap.xml
mkdocs-docs/site/SUMMARY/: index.html
mkdocs-docs/site/changelog/: index.html
mkdocs-docs/site/events/: index.html
mkdocs-docs/site/integration/: index.html
mkdocs-docs/site/search/: search_index.json
mkdocs-docs/site/user-guide/: index.html
sphinx-docs/source/: conf.py  index.rst
tests/: README.md
wiki/: Home.md  SUMMARY.md
(+7 files in other folders)
